@@ -106,8 +106,8 @@
 </ul>
 
 <a href="seminarix-intern.html" target="_top">Seminarix-Intern</a><br>
-
-<a target="_top" href="impressum.html">Impressum</a>
+<a target="_top" href="impressum.html">Impressum</a><br>
+<a href="../index.html" target="_top">Index</a>
 
 </div>
  <!--ende div hauptnavigation-->
